cabal-version:       2.1
name:                foundry
version:             0.1.0.0
build-type:          Simple

library

  exposed-modules:     Source
                       Source.Draw
                       Source.Style
                       Source.Render
                       Source.Input
                       Source.Input.KeyCode
                       Source.Syntax

  build-depends:       base >=4.7
               ,       lens >=4.11
               ,       transformers >=0.4
               ,       gtk3 >=0.13
               ,       cairo >=0.13
               ,       pango >=0.13
               ,       text >=1.2
               ,       streams >=3.2.1
               ,       semigroups >=0.16
               ,       mtl >= 2.2.1
               ,       bifunctors
               ,       inj
               ,       inj-base
               ,       slay-core
               ,       slay-number-double
               ,       slay-combinators

  mixins:
    slay-number-double (Slay.Number.Double as Slay.Number)

  hs-source-dirs:      lib

  default-language:    Haskell2010
  default-extensions:  LambdaCase
                       MultiWayIf
                       TupleSections
                       RecordWildCards
                       RankNTypes
                       ScopedTypeVariables
                       TypeFamilies
                       GADTs
                       PatternSynonyms
                       ViewPatterns
                       ConstraintKinds
                       DataKinds
                       PolyKinds
                       TypeOperators
                       StandaloneDeriving
                       MultiParamTypeClasses
                       FlexibleInstances
                       FlexibleContexts
                       UndecidableInstances

  ghc-options:         -Wall -threaded -O2
  ghc-prof-options:    -fprof-auto
                       -rtsopts
                       -auto-all
                       -caf-all

executable foundry
  main-is:             Main.hs
  other-modules:       Foundry.Syn
                       Foundry.Syn.Text
                       Foundry.Syn.Hole
                       Foundry.Syn.Sum
                       Foundry.Syn.Const
                       Foundry.Syn.Embed
                       Foundry.Syn.Arg
                       Foundry.Syn.Var
                       Foundry.Syn.Expr
                       Foundry.Syn.Record
                       Foundry.Syn.Common

  build-depends:       base
               ,       containers
               ,       transformers
               ,       mtl
               ,       bifunctors
               ,       semigroups
               ,       text
               ,       lens
               ,       gtk3
               ,       singletons
               ,       vinyl
               ,       morte
               ,       template-haskell
               ,       foundry

  hs-source-dirs:      src

  default-language:    Haskell2010
  default-extensions:  LambdaCase
                       ScopedTypeVariables
                       OverloadedStrings
                       RecordWildCards
                       RankNTypes
                       GADTs
                       TypeFamilies
                       ConstraintKinds
                       TypeOperators
                       DataKinds
                       PolyKinds
                       UndecidableInstances
                       InstanceSigs
                       EmptyCase
                       FunctionalDependencies
                       MultiWayIf
                       ViewPatterns
                       StandaloneDeriving
                       DefaultSignatures
                       TemplateHaskell
                       FlexibleInstances
                       FlexibleContexts
                       GeneralizedNewtypeDeriving
                       TypeInType
                       TypeApplications

  ghc-options:         -Wall -threaded -O2
  ghc-prof-options:    -fprof-auto
                       -rtsopts
                       -auto-all
                       -caf-all
