cabal-version:       2.1
name:                foundry
version:             0.1.0.0
build-type:          Simple

library

  exposed-modules:     Source
                       Source.Input
                       Source.Input.KeyCode
                       Source.Phaser
                       Source.NewGen

  build-depends:       base >=4.7
               ,       containers
               ,       lens >=4.11
               ,       transformers >=0.4
               ,       gtk3 >=0.13
               ,       cairo >=0.13
               ,       pango >=0.13
               ,       text >=1.2
               ,       streams >=3.2.1
               ,       semigroups >=0.16
               ,       mtl >= 2.2.1
               ,       bifunctors
               ,       inj
               ,       inj-base
               ,       slay-core
               ,       slay-combinators
               ,       slay-cairo
               ,       sdam

  hs-source-dirs:      lib

  default-language:    Haskell2010

  ghc-options:         -Wall -threaded -O2
  ghc-prof-options:    -fprof-auto
                       -rtsopts
                       -auto-all
                       -caf-all

executable foundry
  main-is:             Main.hs

  build-depends:       base
               ,       containers
               ,       transformers
               ,       mtl
               ,       bifunctors
               ,       semigroups
               ,       text
               ,       lens
               ,       gtk3
               ,       morte
               ,       foundry

  hs-source-dirs:      src

  default-language:    Haskell2010

  ghc-options:         -Wall -threaded -O2
  ghc-prof-options:    -fprof-auto
                       -rtsopts
                       -auto-all
                       -caf-all
