cabal-version:       2.1
name:                foundry
version:             0.1.0.0
build-type:          Simple

library

  exposed-modules:     Source
                       Source.Input
                       Source.Input.KeyCode
                       Source.Phaser
                       Source.NewGen

  build-depends:       base >=4.7
               ,       containers
               ,       dlist
               ,       unordered-containers
               ,       hashable
               ,       lens >=4.11
               ,       transformers >=0.4
               ,       gtk3 >=0.13
               ,       cairo >=0.13
               ,       pango >=0.13
               ,       text >=1.2
               ,       streams >=3.2.1
               ,       semigroups >=0.16
               ,       mtl >= 2.2.1
               ,       bifunctors
               ,       inj
               ,       inj-base
               ,       slay-core
               ,       slay-combinators
               ,       slay-cairo
               ,       sdam

  hs-source-dirs:      lib

  default-language:    Haskell2010

  ghc-options:         -Wall -O2
  ghc-prof-options:    -fprof-auto
                       -auto-all
                       -caf-all

executable foundry
  main-is:             Foundry.hs

  build-depends:       base, unordered-containers, megaparsec, regex-applicative,
                       sdam, foundry

  hs-source-dirs:      src

  default-language:    Haskell2010

  ghc-options:         -Wall -threaded -O2
  ghc-prof-options:    -fprof-auto
                       -rtsopts
                       -auto-all
                       -caf-all

executable morte-to-sdam
  main-is:             MorteToSdam.hs
  build-depends:       base, text, unordered-containers,
                       morte, sdam
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -O2
