name:                source-morte
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable source-morte
  main-is:             Main.hs
  other-modules:       Control.Lens.Discard
                       Source.Language.Morte

  build-depends:       base
               ,       containers
               ,       text
               ,       lens
               ,       morte
               ,       source

  hs-source-dirs:      src

  default-language:    Haskell2010
  default-extensions:  LambdaCase
                       ScopedTypeVariables
                       OverloadedStrings
                       RankNTypes
                       GADTs
