cabal-version:       2.2
name:                foundry
version:             0.1.0.0
build-type:          Simple

library

  exposed-modules:     Source
                       Source.Input
                       Source.Input.KeyCode
                       Source.Phaser
                       Source.NewGen

  build-depends:       base >=4.7
               ,       containers
               ,       dlist
               ,       unordered-containers
               ,       primitive
               ,       hashable
               ,       lens >=4.11
               ,       transformers >=0.4
               ,       gtk3 >=0.13
               ,       cairo >=0.13
               ,       pango >=0.13
               ,       text >=1.2
               ,       streams >=3.2.1
               ,       semigroups >=0.16
               ,       mtl >= 2.2.1
               ,       bifunctors
               ,       inj
               ,       inj-base
               ,       slay-core
               ,       slay-combinators
               ,       slay-cairo
               ,       sdam
               ,       source-plugin
               ,       num-non-negative

  hs-source-dirs:      driver

  default-language:    Haskell2010

  ghc-options:         -Wall -O2
  ghc-prof-options:    -fprof-auto
                       -auto-all
                       -caf-all

library source-plugin
  exposed-modules:     Source.Plugin
                       Source.Plugin.Precedence
  build-depends:       base >=4.7,
                       unordered-containers, text, primitive,
                       hashable, sdam
  hs-source-dirs:      plugin
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  ghc-prof-options:    -fprof-auto
                       -auto-all
                       -caf-all


library source-language-haskell
  exposed-modules:     Source.Language.Haskell
  build-depends:       base >=4.7,
                       unordered-containers, text, primitive,
                       sdam, source-plugin
  hs-source-dirs:      lang/haskell
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  ghc-prof-options:    -fprof-auto
                       -auto-all
                       -caf-all

library source-language-morte
  exposed-modules:     Source.Language.Morte
  build-depends:       base >=4.7,
                       unordered-containers, text, primitive,
                       sdam, source-plugin
  hs-source-dirs:      lang/morte
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  ghc-prof-options:    -fprof-auto
                       -auto-all
                       -caf-all

executable foundry
  main-is:             Foundry.hs

  build-depends:       base, unordered-containers, megaparsec,
                       sdam, source-language-morte, foundry

  hs-source-dirs:      bin

  default-language:    Haskell2010

  ghc-options:         -Wall -threaded -O2
  ghc-prof-options:    -fprof-auto
                       -rtsopts
                       -auto-all
                       -caf-all

executable hask
  main-is:             Hask.hs

  build-depends:       base, unordered-containers, megaparsec,
                       sdam, source-language-haskell, foundry

  hs-source-dirs:      bin

  default-language:    Haskell2010

  ghc-options:         -Wall -threaded -O2

  ghc-prof-options:    -fprof-auto
                       -rtsopts
                       -auto-all
                       -caf-all

executable morte-to-sdam
  main-is:             MorteToSdam.hs
  build-depends:       base, text, containers, morte, sdam
  hs-source-dirs:      bin
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -O2

executable haskell-to-sdam
  main-is:             HaskellToSdam.hs
  build-depends:       base, text, containers, unordered-containers, containers,
                       ghc-lib-parser, sdam, source-language-haskell
  hs-source-dirs:      bin
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -O2

executable sdam-to-svg
  main-is:             SdamToSvg.hs
  build-depends:       base, megaparsec, cairo, filepath,
                       slay-core, sdam, foundry,
                       source-language-haskell,
                       source-language-morte
  hs-source-dirs:      bin
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -O2
