cabal-version:       2.2
name:                foundry
version:             0.1.0.0
build-type:          Simple

common language
  default-language: GHC2021
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveGeneric
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiWayIf
    NegativeLiterals
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns
  ghc-options:
    -Wall


library
  import:              language

  exposed-modules:     Source
                       Source.Input
                       Source.Input.KeyCode
                       Source.Phaser
                       Source.NewGen

  build-depends:       base >=4.7
               ,       containers
               ,       dlist
               ,       unordered-containers
               ,       primitive
               ,       hashable
               ,       lens >=4.11
               ,       transformers >=0.4
               ,       gtk3 >=0.13
               ,       cairo >=0.13
               ,       pango >=0.13
               ,       text >=1.2
               ,       streams >=3.2.1
               ,       semigroups >=0.16
               ,       mtl >= 2.2.1
               ,       bifunctors
               ,       slay-cairo
               ,       sdam
               ,       source-plugin
               ,       num-non-negative

  hs-source-dirs:      driver

  ghc-options:         -O2
  ghc-prof-options:    -fprof-auto
                       -auto-all
                       -caf-all

library source-plugin
  import:              language
  exposed-modules:     Source.Plugin
                       Source.Plugin.Precedence
  build-depends:       base >=4.7,
                       unordered-containers, text, primitive,
                       hashable, sdam
  hs-source-dirs:      plugin
  ghc-options:         -O2
  ghc-prof-options:    -fprof-auto
                       -auto-all
                       -caf-all


library source-language-haskell
  import:              language
  exposed-modules:     Source.Language.Haskell
  build-depends:       base >=4.7,
                       unordered-containers, text, primitive,
                       sdam, source-plugin
  hs-source-dirs:      lang/haskell
  ghc-options:         -O2
  ghc-prof-options:    -fprof-auto
                       -auto-all
                       -caf-all

library source-language-morte
  import:              language
  exposed-modules:     Source.Language.Morte
  build-depends:       base >=4.7,
                       unordered-containers, text, primitive,
                       sdam, source-plugin
  hs-source-dirs:      lang/morte
  ghc-options:         -O2
  ghc-prof-options:    -fprof-auto
                       -auto-all
                       -caf-all

library sdam
  import: language
  exposed-modules:
    Sdam.Syn
    Sdam.Core
    Sdam.Parser
    Sdam.Printer
    Sdam.Validator
  build-depends:
    base, containers, unordered-containers, hashable, text, transformers,
    megaparsec, parser-combinators, pretty
  hs-source-dirs: sdam
  ghc-options: -Wno-partial-type-signatures

library slay-cairo
  import: language

  exposed-modules:
    Source.Layout.Inj
    Source.Layout.NonNegative
    Source.Layout.Core
    Source.Layout.Combinators
    Source.Layout.Cairo
    Source.Layout.Cairo.Element
    Source.Layout.Cairo.Prim
    Source.Layout.Cairo.Prim.Color
    Source.Layout.Cairo.Prim.Rect
    Source.Layout.Cairo.Prim.Text
    Source.Layout.Cairo.Prim.Curve
    Source.Layout.Cairo.Prim.Circle

  build-depends:
    base,
    text,
    cairo,
    pango,
    hashable,
    lrucaching,
    num-non-negative

  hs-source-dirs:
    layout

executable foundry
  import:              language

  main-is:             Foundry.hs

  build-depends:       base, unordered-containers, megaparsec,
                       sdam, source-language-morte, foundry

  hs-source-dirs:      bin

  ghc-options:         -threaded -O2
  ghc-prof-options:    -fprof-auto
                       -rtsopts
                       -auto-all
                       -caf-all

executable hask
  import:              language

  main-is:             Hask.hs

  build-depends:       base, unordered-containers, megaparsec,
                       sdam, source-language-haskell, foundry

  hs-source-dirs:      bin

  ghc-options:         -threaded -O2

  ghc-prof-options:    -fprof-auto
                       -rtsopts
                       -auto-all
                       -caf-all

executable morte-to-sdam
  import:              language

  main-is:             MorteToSdam.hs
  build-depends:       base, text, containers, morte, sdam
  hs-source-dirs:      bin
  ghc-options:         -threaded -O2

executable haskell-to-sdam
  import:              language

  main-is:             HaskellToSdam.hs
  build-depends:       base, text, containers, unordered-containers, containers,
                       ghc-lib-parser, sdam, source-language-haskell
  hs-source-dirs:      bin
  ghc-options:         -threaded -O2

executable sdam-to-svg
  import:              language

  main-is:             SdamToSvg.hs
  build-depends:       base, megaparsec, cairo, filepath,
                       slay-cairo, sdam, foundry,
                       source-language-haskell,
                       source-language-morte
  hs-source-dirs:      bin
  ghc-options:         -threaded -O2
